# t3l

./: b.out  fs.img  main.t3l
include/compiler/: compiler.h  io.h  registers.h
include/compiler/op/: func.h  int.h  modrm.h  mov.h  stack.h
include/t3l/: compiler.h  error.h  lexer.h  parser.h  preproc.h  registers.h
src/: CMakeLists.txt
src/t3l/: builtin.c  compiler.c  error.c  lexer.c  main.c  parser.c  preproc.c
test/: a.out  build.sh  test.S
